--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mapa Cultural - Sua Trilha Cultural</title>
+    <title>Culturaliza - Mapa Cultural</title>
     
     <!-- PWA Meta Tags -->
     <meta name="theme-color" content="#8B5CF6">
